fix getUser